@@ -1,3 +1,9 @@
+Wed Jun  9 13:49:56 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>
+
+        * connectors/ami4ccm/examples/Hello/Receiver/Hello_Receiver_exec.cpp
+        * connectors/ami4ccm/examples/Hello/Sender/Hello_Sender_exec.cpp
+        Cleanup code. Remove printf's.
+
 Wed Jun  9 11:58:56 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>
 
         * bin/ciao_tests.lst
